Fix link z-index

--- a/public/app/ui/pages/detail/DetailPage.less
+++ b/public/app/ui/pages/detail/DetailPage.less
@@ -58,4 +58,9 @@ article.detail {
             }
         }
     }
+
+    .links-container {
+        position: relative;
+        z-index: 1;
+    }
 }
